--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/charts": "^7.15.1",
     "@mantine/core": "^7.15.0",
     "@mantine/form": "^7.15.0",
     "@mantine/hooks": "^7.15.0",
+    "@tabler/icons-react": "^3.24.0",
     "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^2.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
